<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/actionPick"
        android:icon="@drawable/ic_picker_image"
        android:title="@string/action_pick"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="always" />

    <item
        android:id="@+id/actionPaste"
        android:icon="@drawable/sharp_content_paste_search_24"
        android:title="@string/action_paste"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSave"
        android:icon="@drawable/ic_save"
        android:title="@string/action_save"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionVip"
        android:icon="@drawable/ic_workspace_premium"
        android:title="@string/vip_title"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/actionSettings"
        android:icon="@drawable/ic_about"
        android:title="@string/action_settings"
        app:iconTint="?attr/colorOnSurface"
        app:showAsAction="ifRoom" />
</menu>
